Add copyright section to man pages.

--- a/docs/man/sec-diff.1
+++ b/docs/man/sec-diff.1
@@ -106,5 +106,11 @@ Exclude all PID and Prog changes for all ports:
 $\ sec\-gather\-listenports\ |\ sec\-diff\ \-\-exclude\ listenports.*.pid,listenports.*.prog\ listenports.state
 \f[]
 .fi
+.SH COPYRIGHT
+.PP
+Copyright 2017, Ferry Boender.
+.PP
+Licensed under the MIT license.
+For more information, see the LICENSE file.
 .SH AUTHORS
 Ferry Boender.
