--- a/docs/man/sec-gather-unixusers.1
+++ b/docs/man/sec-gather-unixusers.1
@@ -76,5 +76,11 @@ $\ sec\-gather\-unixusers\ \-\-login
 }
 \f[]
 .fi
+.SH COPYRIGHT
+.PP
+Copyright 2017, Ferry Boender.
+.PP
+Licensed under the MIT license.
+For more information, see the LICENSE file.
 .SH AUTHORS
 Ferry Boender.
