--- a/docs/man/sec-report.1
+++ b/docs/man/sec-report.1
@@ -103,5 +103,11 @@ The template can then access these:
 .PP
 If a \[aq]\f[I]/\f[]\[aq] is present in the path, it will be converted
 to \[aq]\f[I]__\f[]\[aq] (double underscores).
+.SH COPYRIGHT
+.PP
+Copyright 2017, Ferry Boender.
+.PP
+Licensed under the MIT license.
+For more information, see the LICENSE file.
 .SH AUTHORS
 Ferry Boender.
