--- a/docs/man/sec-gather-mysqlusers.1
+++ b/docs/man/sec-gather-mysqlusers.1
@@ -92,5 +92,11 @@ $\ sec\-gather\-mysqlusers
 }
 \f[]
 .fi
+.SH COPYRIGHT
+.PP
+Copyright 2017, Ferry Boender.
+.PP
+Licensed under the MIT license.
+For more information, see the LICENSE file.
 .SH AUTHORS
 Ferry Boender.
