--- a/docs/man/sec-gather-unixgroups.1
+++ b/docs/man/sec-gather-unixgroups.1
@@ -81,5 +81,11 @@ $\ sec\-gather\-unixgroups\ \-\-not\-empty
 }
 \f[]
 .fi
+.SH COPYRIGHT
+.PP
+Copyright 2017, Ferry Boender.
+.PP
+Licensed under the MIT license.
+For more information, see the LICENSE file.
 .SH AUTHORS
 Ferry Boender.
