--- a/docs/man/sec-gather-portscan.1
+++ b/docs/man/sec-gather-portscan.1
@@ -10,7 +10,8 @@ sec\-gather\-portscan \[en] Perform port scan and output ports.
 \f[B]sec\-gather\-portscan\f[] [\f[B]\-h\f[]] [\f[B]\-\-version\f[]]
 [\f[B]\-\-debug\f[]] [\f[B]\-\-format\f[] \f[I]{json,html}\f[]]
 [\f[B]\-\-annotate\f[] \f[I]ANNOTATIONFILE\f[]] [\f[B]\-\-ports\f[]
-\f[I]PORTS\f[]] [\f[B]\-\-all\f[]] \f[I]TARGETS\f[]
+\f[I]PORTS\f[]] [\f[B]\-\-all\f[]] [\f[B]\-\-ports\-exclude\f[]
+\f[I]PORTS\f[]] \f[I]TARGETS\f[]
 .SH DESCRIPTION
 .PP
 Perform a port scan against a host using nmap (which should be
@@ -73,6 +74,11 @@ Report all ports, not just open ones.
 .RS
 .RE
 .TP
+.B \f[B]\-\-ports\-exclude\f[] \f[I]PORTS\f[]
+TCP ports to exclude in nmap format
+.RS
+.RE
+.TP
 .B \f[B]TARGET\f[]
 One or more target(s) to scan or a range of targets in the nmap format.
 .RS
@@ -100,6 +106,34 @@ sudo\ ./sec\-gather\-portscan\ \-\-ports\ 1\-1024,8080\ test.example.com
 \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ "state":\ "open",\ 
 \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ "protocol":\ "tcp",\ 
 \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ "port":\ 8080
+\ \ \ \ \ \ \ \ \ \ \ \ }
+\ \ \ \ \ \ \ \ }
+\ \ \ \ }
+}
+\f[]
+.fi
+.PP
+Exclude a range of ports:
+.IP
+.nf
+\f[C]
+sudo\ ./sec\-gather\-portscan\ \-\-ports\-exclude\ 22:25,631\ \-\-all\ 127.0.0.1
+{
+\ \ \ \ "openports":\ {
+\ \ \ \ \ \ \ \ "localhost":\ {
+\ \ \ \ \ \ \ \ \ \ \ \ "6667":\ {
+\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ "reason":\ "syn\-ack",\ 
+\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ "service_name":\ "irc",\ 
+\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ "state":\ "open",\ 
+\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ "protocol":\ "tcp",\ 
+\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ "port":\ 6667
+\ \ \ \ \ \ \ \ \ \ \ \ },\ 
+\ \ \ \ \ \ \ \ \ \ \ \ "8443":\ {
+\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ "reason":\ "syn\-ack",\ 
+\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ "service_name":\ "https\-alt",\ 
+\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ "state":\ "open",\ 
+\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ "protocol":\ "tcp",\ 
+\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ "port":\ 8443
 \ \ \ \ \ \ \ \ \ \ \ \ }
 \ \ \ \ \ \ \ \ }
 \ \ \ \ }
