--- a/docs/man/sec-gather-perms.1
+++ b/docs/man/sec-gather-perms.1
@@ -31,13 +31,23 @@ show program\[aq]s version number and exit
 Show debug info
 .RS
 .RE
+.TP
+.B \f[B]\-\-annotate\f[] \f[I]ANNOTATE\f[]
+annotation file
+.RS
+.RE
+.TP
+.B \f[B]\-\-root\f[] \f[I]ROOT\f[]
+Start from this dir
+.RS
+.RE
 .SH EXAMPLES
 .PP
 Executing:
 .IP
 .nf
 \f[C]
-$\ sec\-gather\-http\-headers\ https://github.com/\ https://gitlab.com/
+$\ sec\-gather\-perms\ \-\-root\ /bin
 \f[]
 .fi
 .PP
@@ -46,46 +56,47 @@ The default output looks like this:
 .nf
 \f[C]
 {
-\ \ \ \ "http_headers":\ {
-\ \ \ \ \ \ \ \ "https://github.com/":\ {
-\ \ \ \ \ \ \ \ \ \ \ \ "Expect\-CT":\ "max\-age=2592000,\ report\-uri=\\"https://api.github.com/_private/browser/errors\\"",
-\ \ \ \ \ \ \ \ \ \ \ \ "Feature\-Policy":\ null,
-\ \ \ \ \ \ \ \ \ \ \ \ "Access\-Control\-Allow\-Origin":\ null,
-\ \ \ \ \ \ \ \ \ \ \ \ "X\-Frame\-Options":\ "deny",
-\ \ \ \ \ \ \ \ \ \ \ \ "Referrer\-Policy":\ "origin\-when\-cross\-origin,\ strict\-origin\-when\-cross\-origin",
-\ \ \ \ \ \ \ \ \ \ \ \ "Access\-Control\-Allow\-Headers":\ null,
-\ \ \ \ \ \ \ \ \ \ \ \ "X\-XSS\-Protection":\ "1;\ mode=block",
-\ \ \ \ \ \ \ \ \ \ \ \ "Strict\-Transport\-Security":\ "max\-age=31536000;\ includeSubdomains;\ preload",
-\ \ \ \ \ \ \ \ \ \ \ \ "Public\-key\-pins":\ null,
-\ \ \ \ \ \ \ \ \ \ \ \ "Content\-Security\-Policy":\ "default\-src\ \[aq]none\[aq];\ base\-uri\ \[aq]self\[aq];\ block\-all\-mixed\-content;\ connect\-src\ \[aq]self\[aq]\ uploads.github.com\ www.githubstatus.com\ collector.githubapp.com\ api.github.com\ www.google\-analytics.com\ github\-cloud.s3.amazonaws.com\ github\-production\-repository\-file\-5c1aeb.s3.amazonaws.com\ github\-production\-upload\-manifest\-file\-7fdce7.s3.amazonaws.com\ github\-production\-user\-asset\-6210df.s3.amazonaws.com\ wss://live.github.com;\ font\-src\ github.githubassets.com;\ form\-action\ \[aq]self\[aq]\ github.com\ gist.github.com;\ frame\-ancestors\ \[aq]none\[aq];\ frame\-src\ render.githubusercontent.com;\ img\-src\ \[aq]self\[aq]\ data:\ github.githubassets.com\ identicons.github.com\ collector.githubapp.com\ github\-cloud.s3.amazonaws.com\ *.githubusercontent.com\ customer\-stories\-feed.github.com;\ manifest\-src\ \[aq]self\[aq];\ media\-src\ \[aq]none\[aq];\ script\-src\ github.githubassets.com;\ style\-src\ \[aq]unsafe\-inline\[aq]\ github.githubassets.com",
-\ \ \ \ \ \ \ \ \ \ \ \ "X\-Content\-Type\-Options":\ "nosniff",
-\ \ \ \ \ \ \ \ \ \ \ \ "Access\-Control\-Allow\-Methods":\ null
+\ \ \ \ "perms":\ [
+\ \ \ \ \ \ \ \ {
+\ \ \ \ \ \ \ \ \ \ \ \ "filename":\ "ping",
+\ \ \ \ \ \ \ \ \ \ \ \ "dir":\ "/bin",
+\ \ \ \ \ \ \ \ \ \ \ \ "path":\ "/bin/ping",
+\ \ \ \ \ \ \ \ \ \ \ \ "type":\ "file",
+\ \ \ \ \ \ \ \ \ \ \ \ "size":\ 64424,
+\ \ \ \ \ \ \ \ \ \ \ \ "mode":\ 35309,
+\ \ \ \ \ \ \ \ \ \ \ \ "uid":\ 0,
+\ \ \ \ \ \ \ \ \ \ \ \ "gid":\ 0,
+\ \ \ \ \ \ \ \ \ \ \ \ "device":\ 64769,
+\ \ \ \ \ \ \ \ \ \ \ \ "trigger_modes":\ [
+\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ "setuid"
+\ \ \ \ \ \ \ \ \ \ \ \ ],
+\ \ \ \ \ \ \ \ \ \ \ \ "mode_hr":\ "\-rwsr\-xr\-x"
 \ \ \ \ \ \ \ \ },
-\ \ \ \ \ \ \ \ "https://gitlab.com/":\ {
-\ \ \ \ \ \ \ \ \ \ \ \ "Expect\-CT":\ null,
-\ \ \ \ \ \ \ \ \ \ \ \ "Feature\-Policy":\ null,
-\ \ \ \ \ \ \ \ \ \ \ \ "Access\-Control\-Allow\-Origin":\ null,
-\ \ \ \ \ \ \ \ \ \ \ \ "X\-Frame\-Options":\ null,
-\ \ \ \ \ \ \ \ \ \ \ \ "Referrer\-Policy":\ null,
-\ \ \ \ \ \ \ \ \ \ \ \ "Access\-Control\-Allow\-Headers":\ null,
-\ \ \ \ \ \ \ \ \ \ \ \ "X\-XSS\-Protection":\ "1;\ mode=block",
-\ \ \ \ \ \ \ \ \ \ \ \ "Strict\-Transport\-Security":\ "max\-age=31536000;\ includeSubdomains",
-\ \ \ \ \ \ \ \ \ \ \ \ "Public\-key\-pins":\ null,
-\ \ \ \ \ \ \ \ \ \ \ \ "Content\-Security\-Policy":\ "frame\-ancestors\ \[aq]self\[aq]\ https://gitlab.lookbookhq.com\ https://learn.gitlab.com;",
-\ \ \ \ \ \ \ \ \ \ \ \ "X\-Content\-Type\-Options":\ "nosniff",
-\ \ \ \ \ \ \ \ \ \ \ \ "Access\-Control\-Allow\-Methods":\ null
-\ \ \ \ \ \ \ \ }
-\ \ \ \ }
-}
+\ \ \ \ \ \ \ \ {
+\ \ \ \ \ \ \ \ \ \ \ \ "filename":\ "mount",
+\ \ \ \ \ \ \ \ \ \ \ \ "dir":\ "/bin",
+\ \ \ \ \ \ \ \ \ \ \ \ "path":\ "/bin/mount",
+\ \ \ \ \ \ \ \ \ \ \ \ "type":\ "file",
+\ \ \ \ \ \ \ \ \ \ \ \ "size":\ 43088,
+\ \ \ \ \ \ \ \ \ \ \ \ "mode":\ 35309,
+\ \ \ \ \ \ \ \ \ \ \ \ "uid":\ 0,
+\ \ \ \ \ \ \ \ \ \ \ \ "gid":\ 0,
+\ \ \ \ \ \ \ \ \ \ \ \ "device":\ 64769,
+\ \ \ \ \ \ \ \ \ \ \ \ "trigger_modes":\ [
+\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ "setuid"
+\ \ \ \ \ \ \ \ \ \ \ \ ],
+\ \ \ \ \ \ \ \ \ \ \ \ "mode_hr":\ "\-rwsr\-xr\-x"
+\ \ \ \ \ \ \ \ },
+\&...
 \f[]
 .fi
 .PP
-You can use the \f[C]reports/sec\-gather\-http\-headers.tpl\f[] report
-to generate a HTML matrix overview of URLs and their security headers:
+You can use the \f[C]reports/sec\-gather\-perms.tpl\f[] report to
+generate a HTML matrix overview of dirs / files and their permissions:
 .IP
 .nf
 \f[C]
-$\ sec\-gather\-http\-headers\ https://github.com/\ https://gitlab.com/\ |\ sec\-report\ reports/sec\-gather\-http\-headers.tpl\ >\ header_matrix.html
+$\ sec\-gather\-perms\ |\ sec\-report\ reports/sec\-gather\-perms.tpl\ >\ permissions.html
 \f[]
 .fi
 .SH COPYRIGHT
