--- a/docs/man/sec-gather-perms.1
+++ b/docs/man/sec-gather-perms.1
@@ -7,8 +7,8 @@ permissions
 .SH SYNOPSIS
 .PP
 \f[B]sec\-gather\-perms\f[] [\f[B]\-h\f[]] [\f[B]\-\-version\f[]]
-[\f[B]\-d\f[]] [\f[B]\-\-annotate\f[] \f[I]ANNOTATIONFILE\f[]]
-[\f[B]\-\-root\f[] \f[I]ROOT\f[]]
+[\f[B]\-d\f[]] [\f[B]\-\-annotate\f[] \f[I]ANNOTATIONFILE\f[]] DIR [DIR
+\&...]
 .SH DESCRIPTION
 .PP
 \f[B]sec\-gather\-perms\f[] outputs files and dirs with dangerous
@@ -36,9 +36,11 @@ Show debug info
 annotation file
 .RS
 .RE
+.PP
+positional arguments:
 .TP
-.B \f[B]\-\-root\f[] \f[I]ROOT\f[]
-Start from this dir
+.B \f[B]DIR\f[]
+Dir to scan
 .RS
 .RE
 .SH EXAMPLES
@@ -47,7 +49,7 @@ Executing:
 .IP
 .nf
 \f[C]
-$\ sec\-gather\-perms\ \-\-root\ /bin
+$\ sec\-gather\-perms\ /bin
 \f[]
 .fi
 .PP
